# Catachess

./: .env.example  1.d4 Nf6 2.c4 e6 3.Bf4 - Complete Repertoire for White - GM Davorin Kuljasevic.pgn  DEBUG_REPORT_SIGNUP.md  ENABLE_MULTI_SPOT.md  FINAL_SUMMARY.md  MULTI_SPOT_IMPLEMENTATION.md  PGN_STUDY_AND_PLAN.md  RAILWAY_DEPLOYMENT.md  RAILWAY_ENV_SETUP.md  SYSTEM_ENABLED.txt  codex_debug.md  conftest.py  debug_chess.py  debug_pgn.py  fixchessortag.md  gemini_summary.md  index.html  issue_report.md  multi-sf.md  nixpacks.toml  our_plan.md  plan_authen.md  railway.json  railway.toml  requirements.txt  suggestions.md  test_real_pgn.py  verify_import.py  verify_multi_spot.py
backend/: main.py  (+2 more)
backend/modules/workspace/: ARCHITECTURE_REDUNDANCY_ANALYSIS.md  DATABASE_MIGRATION_COMPLETE.md  FINAL_TEST_STATUS.md  FIXES_APPLIED.md  PHASE1_COMPLETE.md  PHASE1_FINAL.md  PHASE1_HONEST_STATUS.md  PHASE1_STATUS.md  PHASE2_COMPLETE.md  PHASE2_INTEGRATION_TESTS_COMPLETE.md  PHASE2_PROGRESS.md  PHASE3_COMPLETE.md  PHASE3_TESTS_COMPLETE.md  PHASE_4_SUMMARY.md  Phase7.5完成报告.md  Phase7准备就绪.md  Phase7完成报告.md  Phase8完成报告.md  QUICKSTART.md  README.md  SUMMARY.md  TEST_FIX_SUMMARY.md  __init__.py  alembic.ini  claude_plan.md  debug_tree.py  implement.md  implement.md.backup  main.py  pyproject.toml  quick_start.sh  requirements.txt  测试修复报告.md
backend/modules/workspace/api/: app.py  deps.py  deps_core.py  main.py  rate_limit.py  router.py
backend/modules/workspace/collaboration/: __init__.py  presence_manager.py
backend/modules/workspace/db/: base.py  session.py
backend/modules/workspace/docs/: layout_events.md  optimistic_locking.md  phase0_complete.md  phase1_progress.md  privacy_rules.md  protocols.md  search_indexing.md
backend/modules/workspace/domain/: __init__.py
backend/modules/workspace/events/: __init__.py  bus.py  payloads.py  types.py
backend/modules/workspace/infrastructure/: __init__.py  idempotency.py
backend/modules/workspace/jobs/: __init__.py  presence_cleanup_job.py  snapshot_job.py
backend/modules/workspace/notifications/: aggregator.py  dispatcher.py
backend/modules/workspace/pgn/: __init__.py  chapter_detector.py
(+762 files in other folders)
